--- a/styles.css
+++ b/styles.css
@@ -187,6 +187,27 @@ h3 {
 
 
 
+/* content */
+
+.content {
+    display: flex;
+    flex-direction: row;
+    /* background-color: #439e8d; */
+    color: aliceblue;
+    gap: 20px;
+}
+
+.content .div1{
+    width: 20%;
+}
+
+.content .div2{
+    width: 80%;
+}
+
+
+
+
 
 
 @media (max-width: 768px) {
